src/compose/tests/expected/conditional_missing_import_nested.txt
error: required import 'b' not found
  ┌─ tests/conditional_import_fail/middle.wgsl:1:1
  │
1 │ #define_import_path middle
  │ ^
  │
  = missing import 'b'

